# Purr-hibition

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: beatgenerator.h  draw_stuff.h
app/src/: audiomixer.c  beatgenerator.c  draw_stuff.c  main.c
as3-server/lib/: beatbox_server.js  purr-hibition_server.js
as3-server/public/: index.html
as3-server/public/javascripts/: beatbox_ui.js  purr-hibition_ui.js
byai_camera/: CMakeLists.txt
byai_camera/include/byai_camera/: cameraController.h  catDetector.h
byai_camera/src/: cameraController.c  catDetector.c
hal/: CMakeLists.txt
hal/include/hal/: button.h  cat_detector.h  deter.h  deterrents.h  gpio.h  motionSensor.h  sharedMemory.h  udp.h
hal/src/: button.c  catDetector.c  cat_detector.c  deter.c  deterrents.c  draw_stuff.c  gpio.c  motionSensor.c  sharedMemory.c  udp.c
lcd/: CMakeLists.txt
lcd/lib/GUI/: GUI_BMP.c
python/: log_config.py  video_streaming_server.py
python/MobileNetSSD/: MobileNetSSD_deploy.prototxt
python/templates/: index.html
scripts/: host_dep_setup.sh  target_dep_setup.sh
webapp/: server.js
webapp/public/: index.html  style.css
webapp/public/javascripts/: purr-hibition_ui.js
webapp/public/videos/: purr-hibition-1743446886.127361.webm  purr-hibition-1743446918.629338.webm  purr-hibition-1743446942.468674.webm  purr-hibition-1743446959.857417.webm  purr-hibition-1743448122.765607.webm  purr-hibition-1743448498.505113.webm  purr-hibition-1744066720.387645.webm  purr-hibition-1744066749.760253.webm  purr-hibition-1744066784.799396.webm  purr-hibition-1744066811.574192.webm  purr-hibition-1744066887.416761.webm  purr-hibition-1744066918.406608.webm  purr-hibition-1744066952.10979.webm  purr-hibition-1744066992.07034.webm  purr-hibition-1744067035.415625.webm  purr-hibition-1744067535.388084.webm  purr-hibition-1744067550.105578.webm  purr-hibition-1744067593.496503.webm  purr-hibition-1744067619.47099.webm
